# cpa-warden-windows-auto-maintain

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  README.zh-CN.md  SECURITY.md  auto_maintain.bat  auto_maintain.config.example.json  auto_maintain.py  cmd.md  cpa_warden.py  pyproject.toml  smart_scheduler.py  start_auto_maintain_optimized.bat
.github/: pull_request_template.md
cwma/: __init__.py  auto_maintain.py  cpa_warden.py  smart_scheduler.py
results/: stage0_baseline_report.md  stage0_json_replay_baseline.csv  stageX_vs_stage0_report.md
tests/: temp_sandbox.py  test_auto_inprocess_channel_module.py  test_auto_maintain.py  test_auto_maintain_pipeline_runtime_module.py  test_auto_maintain_pipeline_state_module.py  test_auto_modules.py  test_auto_modules_process_channel.py  test_auto_modules_state.py  test_auto_modules_ui.py  test_auto_shutdown_runtime_module.py  test_auto_upload_stability_module.py  test_quality_gate_runner_tool_module.py  test_stage_comparison_report_tool_module.py  test_startup_flow_module.py  test_warden_cli_module.py  test_warden_config_module.py  test_warden_db_repository_module.py  test_warden_db_schema_module.py  test_warden_exports_module.py  test_warden_interactive_module.py  test_warden_maintain_scope_module.py  test_warden_maintain_service_module.py  test_warden_management_api_module.py  test_warden_models_module.py  test_warden_refill_service_module.py  test_warden_runtime_ops_module.py  test_warden_scan_service_module.py  test_warden_upload_scope_module.py  test_warden_upload_service_module.py  (+2 more)
(+104 files in other folders)
