[project]
name = "cpa-warden-windows-auto-maintain"
version = "0.2.0"
description = "Windows-first automation orchestration built on top of cpa-warden."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "aiohttp>=3.12.15",
  "rich>=13.9.4",
  "requests>=2.32.5",
]

[tool.uv]
package = false
